// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button  renders 1`] = `
<button
  class="p-button"
>
  Test content
</button>
`;

exports[`Button  renders as a link 1`] = `
<a
  class="p-button"
  href="http://example.com"
>
  Test content
</a>
`;
